--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
+    <title>¡Aventura de Multiplicación!</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>¡Aventura de Multiplicación!</h1>
+      <div id="score"></div>
+      <div id="timer"></div>
+      <div id="questionCount"></div>
+      <div id="question"></div>
+      <div id="options"></div>
+      <div id="dropZone"></div>
+      <div id="result"></div>
+      <div id="gameOver"></div>
+      <button id="resetButton">¡Jugar de nuevo! 🔄</button>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
