Agregando header y footer

--- a/index.html
+++ b/index.html
@@ -13,18 +13,34 @@
     <title>¡Aventura de Multiplicación!</title>
   </head>
   <body>
+    <header>
+      <span>🎲 ¡Aventura de Multiplicación! 🎲</span>
+    </header>
     <div class="container">
       <h1>¡Aventura de Multiplicación!</h1>
-      <div id="score"></div>
-      <div id="timer"></div>
-      <div id="questionCount"></div>
+      <div id="score">Estrellas: 0 ⭐</div>
+      <div id="timer">Tiempo: 10s ⏱️</div>
+      <div id="questionCount">Pregunta: 1 / 50 🚀</div>
       <div id="question"></div>
       <div id="options"></div>
-      <div id="dropZone"></div>
+      <div id="dropZone">¡Suelta tu respuesta aquí! 🎯</div>
       <div id="result"></div>
       <div id="gameOver"></div>
       <button id="resetButton">¡Jugar de nuevo! 🔄</button>
     </div>
+    <footer>
+      <div class="footer-content">
+        <div>
+          © 2024 Aventura de Multiplicación, realizada por Frankhs899 🧮
+        </div>
+        <a
+          href="https://github.com/Frankhs899/Multiplication-Adventure.git"
+          target="_blank"
+        >
+          👨‍💻 Ver en GitHub 👩‍💻
+        </a>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
