Reajustando index.js

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class="container">
       <h1>¡Aventura de Multiplicación!</h1>
       <div id="score">Estrellas: 0 ⭐</div>
-      <div id="timer">Tiempo: 10s ⏱️</div>
-      <div id="questionCount">Pregunta: 1 / 50 🚀</div>
+      <div id="timer"></div>
+      <div id="questionCount"></div>
       <div id="question"></div>
       <div id="options"></div>
-      <div id="dropZone">¡Suelta tu respuesta aquí! 🎯</div>
+      <div id="dropZone"></div>
       <div id="result"></div>
       <div id="gameOver"></div>
       <button id="resetButton">¡Jugar de nuevo! 🔄</button>
