--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div id="gameOver"></div>
       <button id="resetButton">¡Jugar de nuevo! 🔄</button>
     </div>
+<img src="https://visit-counter.vercel.app/counter.png?page=https%3A%2F%2Ffrankhs899.github.io%2FMultiplication-Adventure%2F&s=40&c=ff0000&bg=00000000&no=2&ff=digi&tb=&ta=" alt="visits">
     <footer>
       <div class="footer-content">
         <div>
